[package]
name = "config-disassembler-crate"
version = "0.4.0"
authors = ["Matt Carvin"]
license = "MIT"
edition = "2021"
exclude = ["index.node"]

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", default-features = false, features = ["napi4"] }
napi-derive = "3"
config-disassembler = "0.5.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
env_logger = "0.11"
serde_json = "1"
log = "0.4"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
